--- a/Handmade/Handmade.vcxproj
+++ b/Handmade/Handmade.vcxproj
@@ -210,7 +210,7 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Line.h" />
-    <ClInclude Include="LineCollider.h" />
+    <ClInclude Include="LineSegment.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Model.h" />
@@ -250,7 +250,7 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Line.cpp" />
-    <ClCompile Include="LineCollider.cpp" />
+    <ClCompile Include="LineSegment.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Model.cpp" />
