--- a/Handmade/Handmade.vcxproj
+++ b/Handmade/Handmade.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="OBBCollider.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="OrbitCamera.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Quad.h" />
     <ClInclude Include="Resource.h" />
@@ -257,6 +258,7 @@
     <ClCompile Include="OBBCollider.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="OrbitCamera.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Quad.cpp" />
     <ClCompile Include="RigidBody.cpp" />
