--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -204,6 +204,9 @@
     <ClInclude Include="Capsule.h">
       <Filter>Header Files\Components\Physics</Filter>
     </ClInclude>
+    <ClInclude Include="Plane.h">
+      <Filter>Header Files\Components\Physics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Screen.cpp">
@@ -312,6 +315,9 @@
       <Filter>Source Files\Objects</Filter>
     </ClCompile>
     <ClCompile Include="Capsule.cpp">
+      <Filter>Source Files\Components\Physics</Filter>
+    </ClCompile>
+    <ClCompile Include="Plane.cpp">
       <Filter>Source Files\Components\Physics</Filter>
     </ClCompile>
   </ItemGroup>
