--- a/Handmade/Handmade.vcxproj
+++ b/Handmade/Handmade.vcxproj
@@ -193,6 +193,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="About.h" />
     <ClInclude Include="Audio.h" />
     <ClInclude Include="Axes.h" />
     <ClInclude Include="BoxCollider.h" />
@@ -235,6 +236,7 @@
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="About.cpp" />
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Axes.cpp" />
     <ClCompile Include="BoxCollider.cpp" />
