--- a/Handmade/Handmade.vcxproj
+++ b/Handmade/Handmade.vcxproj
@@ -158,7 +158,7 @@
     <ClCompile Include="Cuboid.cpp" />
     <ClCompile Include="Design.cpp" />
     <ClCompile Include="FreeCamera.cpp" />
-    <ClCompile Include="gl.c" />
+    <ClCompile Include="GLAD\gl.c" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Light.cpp" />
@@ -197,6 +197,8 @@
     <ClInclude Include="Cuboid.h" />
     <ClInclude Include="Design.h" />
     <ClInclude Include="FreeCamera.h" />
+    <ClInclude Include="GLAD\gl.h" />
+    <ClInclude Include="GLAD\khrplatform.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Light.h" />
