--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -94,6 +94,12 @@
     <Filter Include="Source Files\Core\GLAD">
       <UniqueIdentifier>{6021f0c6-d0a8-4474-9e50-4da571be1df7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Core\imgui">
+      <UniqueIdentifier>{ff4db32e-1a30-4839-8ea5-a479ce95c5fd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Core\imgui">
+      <UniqueIdentifier>{8425db54-9acc-43b0-b13b-626b0062bae5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Screen.h">
@@ -210,6 +216,24 @@
     <ClInclude Include="GLAD\khrplatform.h">
       <Filter>Header Files\Core\GLAD</Filter>
     </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>Header Files\Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>Header Files\Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>Header Files\Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>Header Files\Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>Header Files\Core\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>Header Files\Core\imgui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Screen.cpp">
@@ -322,6 +346,21 @@
     </ClCompile>
     <ClCompile Include="GLAD\gl.c">
       <Filter>Source Files\Core\GLAD</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>Source Files\Core\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_demo.cpp">
+      <Filter>Source Files\Core\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>Source Files\Core\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>Source Files\Core\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>Source Files\Core\imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
